--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     </div>
     <section id="blog">
       <div class="blog-heading">
-        <span>my recent posts</span>
-        <h3>my blog</h3>
+        <span>our recent updates</span>
+        <h3>variety of choices </h3>
       </div>
       <div class="blog-container">
         <div class="blog-box">
@@ -48,7 +48,7 @@
           </div>
           <div class="blog-text">
             <span>11 july 2023</span>
-            <a href="#" class="blog-title">what had hppened ?</a>
+            <a href="#" class="blog-title">pre booking number of tables</a>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -63,7 +63,7 @@
           </div>
           <div class="blog-text">
             <span>11 july 2023</span>
-            <a href="#" class="blog-title">what had hppened ?</a>
+            <a href="#" class="blog-title"> specify the location of ur table</a>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -78,7 +78,7 @@
           </div>
           <div class="blog-text">
             <span>11 july 2023</span>
-            <a href="#" class="blog-title">what had hppened ?</a>
+            <a href="#" class="blog-title">our available timings </a>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua.
